/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
import "basecluster/agent/AgentMember.proto";

package basecluster.agent;

option java_multiple_files = true;
option java_package = "org.apache.bifromq.basecluster.agent.proto";
option java_outer_classname = "AgentMessageProtos";
option optimize_for = SPEED;

message AgentMessage {
  AgentMemberAddr sender = 1;
  bytes payload = 2;
}
message AgentMessageEnvelope{
  string agentId = 1;
  AgentMemberAddr receiver = 2;
  AgentMessage message = 3;
}
